--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "SSL cert expiration checker",
   "main": "check-all-ssl.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.3.1",
     "https": "^1.0.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "viem": "^2.45.0"
   }
 }
