--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SSL cert expiration checker",
   "main": "check-all-ssl.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
